--- a/Cables/sinecity.html
+++ b/Cables/sinecity.html
@@ -2,10 +2,10 @@
 <html lang="en">
 
 <head>
-    <title>copy of VertexDisplacementScan</title>
+    <title>copy of SineCity Remix</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1">
-    <meta itemprop="name" content="copy of VertexDisplacementScan">
+    <meta itemprop="name" content="copy of SineCity Remix">
     <meta itemprop="description" content="made with cables">
     <meta itemprop="image" content="screenshot.png">
     <meta name="description" content="made with cables" />
@@ -13,7 +13,7 @@
     <style>
         body {
             margin: 0;
-            background-color: #000;
+            background-color: transparent;
             color: #fff;
             font-family: Helvetica, Arial, sans-serif;
             overflow: hidden; /* disable scrolling / rubberband effect on mobile */
@@ -58,13 +58,10 @@
 
 <body>
     <canvas id="glcanvas" width="100vw" height="100vh" tabindex="1"></canvas>
-    <footer>
-        made with <a href='https://cables.gl'>cables</a>
-        <!-- we would greatly appreciate if you link cables somewhere on your site! and tell us your website! thanks <3 :) -->
-    </footer>
+
 
     <libs/>
-    <script type="text/javascript" src="js/patch.js" async></script>
+    <script type="text/javascript" src="js2/patch.js" async></script>
     <corelibs/>
 
     <script>
@@ -83,6 +80,9 @@
 
         document.addEventListener('CABLES.jsLoaded', function (event) {
             CABLES.patch = new CABLES.Patch({
+
+                canvas: {alpha: true, premultipliedAlpha: true},
+                
                 patch: CABLES.exportedPatch,
                 prefixAssetPath: '',
                 glCanvasId: 'glcanvas',
