--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
       
       <body>
         <div class="container">
-          <div class="box"><iframe src="cables/background.html"  width="100%" height="100%" frameborder="0"></iframe> </div>
-          <div class="box overlay"><iframe src="cables/sinecity.html" width="100%" height="100%" frameborder="0"></iframe> </div>
+          <div class="box"><iframe src="cables2/background.html"  width="100%" height="100%" frameborder="0"></iframe> </div>
+          <div class="box overlay"><iframe src="cables2/sinecity.html" width="100%" height="100%" frameborder="0"></iframe> </div>
         </div>
       </body>
 </html>
